--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
 </head>
 <body>
-  <div class="card__container">
+  <main>
     <div class="card__content">
       <div class="qr__img">
         <img src="./images/image-qr-code.png" alt="#">
       </div>
       <div class="text__content">
-        <h2>Improve your front-end skills by building projects</h2>
+        <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
-  </div>
+  </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
